--- a/package.json
+++ b/package.json
@@ -1,26 +1,53 @@
 {
-  "name": "gatsby-starter-default",
-  "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
-  "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "name": "marhaf",
+  "private": false,
+  "description": "Marhaf Chamie – Senior AI & Software Engineer | Portfolio & Projects",
+  "version": "1.0.0",
+  "author": "Marhaf Chamie <inmogr@msn.com>",
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.4",
+    "@radix-ui/react-scroll-area": "^1.2.4",
+    "@radix-ui/react-slot": "^1.2.0",
+    "autoprefixer": "^10.4.21",
+    "class-variance-authority": "^0.7.1",
     "gatsby": "^5.14.1",
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-manifest": "^5.14.0",
+    "gatsby-plugin-postcss": "^6.14.0",
+    "gatsby-plugin-react-helmet": "^6.14.0",
     "gatsby-plugin-sharp": "^5.14.0",
     "gatsby-source-filesystem": "^5.14.0",
     "gatsby-transformer-sharp": "^5.14.0",
+    "lucide-react": "^0.487.0",
+    "postcss": "^8.5.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "prettier": "^2.8.8"
+    "@types/node": "^22.14.0",
+    "@types/react-helmet": "^6.1.11",
+    "gatsby-plugin-minify": "^0.5.0",
+    "gatsby-plugin-no-sourcemaps": "^5.14.0",
+    "knip": "^5.50.2",
+    "prettier": "^2.8.8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.8.3"
   },
   "keywords": [
-    "gatsby"
+    "portfolio",
+    "marhaf-chamie",
+    "ai",
+    "react",
+    "react-native",
+    "nodejs",
+    "fullstack",
+    "cloud",
+    "software-engineering"
   ],
-  "license": "0BSD",
+  "license": "MIT",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
@@ -28,13 +55,15 @@
     "start": "gatsby develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "knip": "knip",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/inmogr/marhaf"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  }
+    "url": "https://github.com/inmogr/marhaf/issues"
+  },
+  "homepage": "https://marhafs-portfolio.web.app"
 }
